<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.github.ck7179.runpather.SignInActivity"
    android:orientation="vertical"
    android:background="@color/colorWhite">

    <TextView
        android:id="@+id/textview_SignIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="100dp"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/JoinUs"
        android:textColor="@color/colorTextBlack2"
        android:textSize="60sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_SignIn_Info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/JoinUs_Info"
        android:textColor="@color/colorTextBlack2"
        android:textSize="24sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_SignIn" />

    <Button
        android:id="@+id/button_FacebookLogin"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/colorFacebookBlue"
        android:gravity="center"
        android:text="@string/FacebookLogin"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView_SignIn_Info"
        app:layout_constraintVertical_bias="0.141" />

    <Button
        android:id="@+id/button_GoogleLogin"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="50dp"
        android:background="@color/colorGoogleRed"
        android:gravity="center"
        android:text="@string/GoogleLogin"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/button_FacebookLogin"
        app:layout_constraintRight_toRightOf="@+id/button_FacebookLogin"
        app:layout_constraintTop_toBottomOf="@+id/textview_SignIn"
        app:layout_constraintVertical_bias="0.347" />
</android.support.constraint.ConstraintLayout>
